[project]
name = "telegram-bot"
version = "0.1.0"
description = "Bot Telegram automatisé pour prédictions"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "telethon>=1.40.0"
]

[tool.poetry]
package-mode = false
